# Goma_Cardano

./: README.md
always-succeeds-plutus-v2/: always-succeeds-plutus-v2.cabal  readme-preview.md  readme.md
always-succeeds-plutus-v2/output/: creation monnaies.txt  datum.hash  datum.json  datum1.json  datum_akili.json  egal_dat_red.addr  egal_dat_red.body  egal_dat_red.plutus  egal_dat_red.signed  goma_r1.body  goma_r1.signed  goma_r40.body  goma_r40.signed  goma_r50.body  goma_r50.signed  goma_red.addr  goma_red1.addr  goma_red40.addr  goma_red50.addr  paiement1.addr  paiement1.skey  paiement1.vkey  paiement2.addr  paiement2.skey  paiement2.vkey  raw.signed  tjrs-succes-plutus-red.plutus  tjrs-succes-plutus-red1.plutus  tjrs-succes-plutus-red40.plutus  tjrs-succes-plutus-red50.plutus  tx.draft  tx.raw  tx.signed  tx_lg.body  tx_lg.signed  tx_v2_eg.body  tx_v2_eg.signed
always-succeeds-plutus-v2/src/: AlwaysSucceedsCompiler.hs  AlwaysSucceedsValidator.hs
ekival-transfer-testnet/: .gitignore  README.md  finalize-tx.md  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  package-lock.json  package.json  wrapPageElement.js
ekival-transfer-testnet/src/: html.js  store.js
ekival-transfer-testnet/src/bounties/: i-jd00-000.md  (+6 more)
ppbl_traduction/: README.md  apollo-client.ts  next.config.js  package-lock.json  package.json  tsconfig.json
smart_contract/: EkivalEscrow.hs  ExtendingRedeemer.hs  ekival-play-testnet.plutus  ekival.addr  proparameterized-game-03_G1.plutus  tx_ekival.signed
updev_ekivalapp-dev/: app.vue  cabal.project.local  index.d.ts  nuxt.config.ts  package-lock.json  windi.config.ts
updev_ekivalapp-dev/components/: HomeBanner.vue
updev_ekivalapp-dev/composables/: useTransaction.ts  useUtxosFromAddress.ts
updev_ekivalapp-dev/layouts/: page.vue
updev_ekivalapp-dev/pages/: index.vue  orders.vue
updev_ekivalapp-dev/stores/: main.ts
updev_ekivalapp-dev/utils/: app.ts
(+144 files in other folders)
